# parallel-crawling-research

./: .gitignore  CMakeLists.txt  README.md
abstract-crawler/: CMakeLists.txt
abstract-crawler/inc/: AbstractCrawler.h
abstract-crawler/src/: AbstractCrawler.cpp
async-epoll/: CMakeLists.txt  filtered_urls.txt
async-epoll/inc/: EpollCrawler.h
async-epoll/src/: EpollCrawler.cpp  main.cpp
base-crawler/: CMakeLists.txt  README.md
base-crawler/include/: BaseCrawler.h
base-crawler/src/: BaseCrawler.cpp  main.cpp
cmake/: PVS-Studio.cmake
directory-parser/: CMakeLists.txt  README.md  get_html_list.py  html_stats.py  html_stats_from_file.py  test.txt
directory-parser/inc/: directory_parser.h
directory-parser/sample/1/: details.html  pictures.html  recomendations.html  reviews_1.html  reviews_10.html  reviews_11.html  reviews_12.html  reviews_13.html  reviews_14.html  reviews_15.html  reviews_16.html  reviews_17.html  reviews_18.html  reviews_19.html  reviews_2.html  reviews_20.html  reviews_21.html  reviews_22.html  reviews_3.html  reviews_4.html  reviews_5.html  reviews_6.html  reviews_7.html  reviews_8.html  reviews_9.html  staff.html  stats.html
directory-parser/sample/18/: details.html  pictures.html  recomendations.html  reviews_1.html  staff.html  stats.html
directory-parser/sample/www.quote.com/: a.html  aapl.html  abt.html  abx.html  acv.html  adbe.html  adi.html  adm.html  adp.html  adpt.html  adsk.html  advs.html  aee.html  aep.html  aes.html  aet.html  affx.html  afl.html  agn.html  ahc.html  aig.html  akam.html  al.html  all.html  altr.html  am.html  amat.html  amcc.html  amd.html  amgn.html  amr.html  amtd.html  amzn.html  anf.html  aoc.html  apa.html  apc.html  apcc.html  apd.html  arba.html  (+80 more)
directory-parser/src/: directory_parser.cpp  main.cpp
directory-parser/test-websites/fake_articles/: news_articles_427.html
google-benchmark/: 02_optimizations.csv  CMakeLists.txt  README.md  bench.csv  benchmarks.csv  benchmarks.json  main.cpp  optimizations.csv  plot.py  run.py  segfault.csv  test.csv  test.txt
google-benchmark/src/: main.cpp
nginx-setup/: README.md
nginx-setup/test-websites/website2/: index.html
process-crawler/: CMakeLists.txt
process-crawler/inc/: ProcessCrawler.h
process-crawler/src/: ProcessCrawler.cpp  main.cpp
process-per-socket/: CMakeLists.txt
process-per-socket/inc/: ProcessCrawler.h  ProcessSocketCrawler.h
process-per-socket/src/: ProcessCrawler.cpp  ProcessSocketCrawler.cpp  main.cpp
requests/: CMakeLists.txt
requests/inc/: requests.h
requests/src/: main.cpp  main.cpp~  requests.cpp
results-for-second-paper/no_turbo_hyper/: clang_O0.csv  clang_O1.csv  clang_O2.csv  clang_O3.csv  clang_march.csv  gcc_O0.csv  gcc_O1.csv  gcc_O2.csv  gcc_O3.csv  gcc_march.csv
results-for-second-paper/no_turbo_no_hyper/: clang_O0.csv  clang_O1.csv  clang_O2.csv  clang_O3.csv  clang_march.csv  gcc_O0.csv  gcc_O1.csv  gcc_O2.csv  gcc_O3.csv  gcc_march.csv
results-for-second-paper/turbo_hyper/: clang_O3.csv  clang_march.csv  gcc_O2.csv  gcc_march.csv
results-for-second-paper/turbo_no_hyper/: clang_O0.csv  clang_O1.csv  clang_O2.csv  clang_O3.csv  clang_march.csv  gcc_O0.csv  gcc_O1.csv  gcc_O2.csv  gcc_O3.csv  gcc_march.csv
results-processing/: README.md  benchmarks_6.csv  delete_outliers.py  epoll.csv  mean_std.csv  one_plot.py  plot_lines_distr.py  plotting.py  process.csv  process_benchmarks.csv  process_results.py  statistics.csv  student_wilcoxon.py  tps_500.csv
results-processing/benchmark-files/: benchmarks_test_10.csv  benchmarks_test_75.csv  epoll_500.csv  epoll_benchmarks.csv  pps_500.csv  thread_benchmarks.csv
results-processing/comparison-version/: README.md  benchmarks.csv  benchmarks_internet_final.csv  plot_results.py
results-processing/final/: epol_10_10.csv  epoll.csv  epoll2_0.csv  epoll3_0.csv  pps_100.csv  pps_200.csv  process.csv  process2_0.csv  process3_0.csv  temp_plot.csv  thread.csv  thread2_0.csv  thread3_0.csv
results-processing/new/: delete_outliers.py  plotting.py  preprocessing.py  processing.py  statistical_tests.py
results-processing/new/data/: clang_O0.csv  clang_O1.csv  clang_O2.csv  gcc_O0.csv  gcc_O1.csv  gcc_O3.csv
results-processing/old/: thread.csv
results-visualization/: README.md  benchmarks_ethernet_final.csv  example_benchmarks.csv  plot_results.py
server_setup/: README.md  commands_list.sh  nginx.conf
server_setup/test-websites/: website3.html
test-base-crawler/: CMakeLists.txt  README.md
test-base-crawler/include/: BaseCrawler.h
test-base-crawler/src/: main.cpp
thread-crawler/: filtered_urls.txt  new_urls.txt
thread-crawler/inc/: ThreadCrawler.h
thread-crawler/src/: ThreadCrawler.cpp  main.cpp
thread-per-socket/: CMakeLists.txt
thread-per-socket/inc/: AbstractCrawler.h  ThreadCrawler.h  ThreadSocketCrawler.h  requests.h
thread-per-socket/src/: AbstractCrawler.cpp  ThreadCrawler.cpp  ThreadSocketCrawler.cpp  main.cpp  requests.cpp
